cmake_minimum_required(VERSION 3.10)
project(leetCodeProject)

set(CMAKE_CXX_STANDARD 14)

#add_executable(removeElements removeElements.cpp)
#add_executable(removeDuplicates removeDuplicates.cpp)
#add_executable(moveZero moveZero.cpp)
#add_executable(relativeSortArrray relativeSortArrray.cpp)
#add_executable(backspaceCompare backspaceCompare.cpp)
add_executable(isAnagram isAnagram.cpp)
